Home and Skills completed

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^3.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,8 +13,12 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "schema-utils": "^4.2.0",
+    "slick-carousel": "^1.8.1",
+    "tw-colors": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
