--- a/package.json
+++ b/package.json
@@ -1,52 +1,56 @@
 {
-  "name": "personal-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@flaticon/flaticon-uicons": "^3.3.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1",
-    "react-reveal": "^1.2.2",
-    "react-scripts": "5.0.1",
-    "react-slick": "^0.30.2",
-    "schema-utils": "^4.2.0",
-    "slick-carousel": "^1.8.1",
-    "tw-colors": "^3.3.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "tailwindcss": "^3.4.4"
-  }
+    "homepage": "https://kalyani179.github.io/portfolio",
+    "name": "personal-portfolio",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@flaticon/flaticon-uicons": "^3.3.1",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "ajv": "^6.12.6",
+        "ajv-keywords": "^3.5.2",
+        "bootstrap": "^5.3.3",
+        "react": "^18.3.1",
+        "react-bootstrap": "^2.10.4",
+        "react-dom": "^18.3.1",
+        "react-reveal": "^1.2.2",
+        "react-scripts": "5.0.1",
+        "react-slick": "^0.30.2",
+        "schema-utils": "^4.2.0",
+        "slick-carousel": "^1.8.1",
+        "tw-colors": "^3.3.1",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "gh-pages": "^6.1.1",
+        "tailwindcss": "^3.4.4"
+    }
 }
