--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "react-bootstrap": "^2.10.4",
         "react-dom": "^18.3.1",
         "react-reveal": "^1.2.2",
-        "react-scripts": "5.0.1",
         "react-slick": "^0.30.2",
         "schema-utils": "^4.2.0",
         "slick-carousel": "^1.8.1",
@@ -51,6 +50,7 @@
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "gh-pages": "^6.1.1",
+        "react-scripts": "^5.0.1",
         "tailwindcss": "^3.4.4"
     }
 }
